<resources>
    <string name="app_name">MoneyMan</string>

    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="tv_register">Don\'t have an account? <u>Register Now</u></string>
    <string name="tv_login">Already have an account? <u>Login Now</u></string>

    <string name="menu_home">Home</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_profile">Profile</string>

    <string name="home_account_title">Accounts</string>
    <string name="home_balance_title">Balance</string>
    <string name="home_history_title">History</string>
    <string name="account_title">Account</string>
    <string name="profile_title">Account</string>
    <string name="add_transaction_title">Add Transaction</string>
    <string name="edit_profile_title">Edit Profile</string>

    <string name="home_account_add">Add Account</string>
    <string name="no_transaction">You haven\'t had any transactions yet</string>

    <string name="input_username">Username</string>
    <string name="input_newname">New Username</string>
    <string name="input_email">E-mail</string>
    <string name="input_password">Password</string>
    <string name="input_newpassword">New Password (Optional)</string>
    <string name="input_confirmation_password">Confirm Password</string>
    <string name="input_phone_number">Phone Number</string>
    <string name="input_gender">Gender</string>
    <string name="input_male">Male</string>
    <string name="input_female">Female</string>
    <string name="input_date_of_birth">Date of Birth</string>
    <string name="button_select_date">SELECT DATE</string>

    <string name="profile_greeting">Wallet</string>
    <string name="profile_email">Email</string>

    <string name="account_edit">Edit Profile</string>
    <string name="account_settings">Settings</string>
    <string name="account_help">Help</string>
    <string name="account_about">About</string>
    <string name="account_password">Change Password</string>
    <string name="account_name">Account Name</string>
    <string name="account_balance">Account Balance</string>

    <string-array name="categories">
        <item>Income</item>
        <item>Expense</item>
        <item>Debt</item>
        <item>Paid Debt</item>
    </string-array>

    <string-array name="method">
        <item>Cash</item>
        <item>Credit</item>
        <item>Digital Wallets</item>
        <item>Debit</item>
        <item>Checks</item>
    </string-array>

</resources>
