<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.RegisterActivity">

<!--    <RelativeLayout-->
<!--        android:id="@+id/register_header"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="20dp">-->

<!--        <TextView-->
<!--            android:id="@+id/register_title"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/activity_register_title"-->
<!--            android:textSize="30sp"-->
<!--            android:layout_alignParentTop="true"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:textColor="@android:color/black"-->
<!--            android:textStyle="bold"/>-->

<!--    </RelativeLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/register_footer">

        <LinearLayout
            android:id="@+id/register_form_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_username"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_person_outline_black_24dp"
                    style="@style/TIForm"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                    style="@style/TIForm"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    style="@style/TIForm"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_til_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_confirmation_password"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    style="@style/TIForm"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_phone_number"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:drawableStart="@drawable/ic_phone_black_24dp"
                    style="@style/TIForm"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/register_rg"
                    android:text="@string/input_gender"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"/>

                <RadioGroup
                    android:id="@+id/register_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/register_rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/input_male"
                        android:buttonTint="@color/colorGreen"/>

                    <RadioButton
                        android:id="@+id/register_rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/input_female"
                        android:buttonTint="@color/colorGreen"/>

                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:id="@+id/register_tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/register_btn_date"
                    android:text="@string/input_date_of_birth"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"/>

                <Button
                    android:id="@+id/register_btn_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingHorizontal="20dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/button_select_date"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/register_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/register_btn_register"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/button_register"
            android:textSize="16sp"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>