<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:gravity="center_horizontal"
    android:background="@color/colorWhite">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/edit_profile_center"
        android:scaleType="fitXY"
        android:src="@drawable/top"/>

    <LinearLayout
        android:id="@+id/edit_profile_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_layout_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="100dp">
            <ImageView
                android:id="@+id/edit_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/profile_icon"
                android:scaleType="centerCrop"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/edit_profile_title"
            android:textColor="@color/colorBlack"
            android:textSize="32dp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_profile_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/input_newname"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                style="@style/TIForm"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_profile_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/input_newpassword"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                style="@style/TIForm"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_til_cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_profile_et_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/input_confirmation_password"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                style="@style/TIForm"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/edit_profile_btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/button_confirm"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_button"
            style="@style/CleanButton"/>

        <Button
            android:id="@+id/edit_profile_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/button_cancel"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorDisabled"
            style="@style/CleanButton"/>

    </LinearLayout>

</RelativeLayout>