<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddTransactionActivity"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/add_transaction_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_transaction_title"
        android:textColor="@color/colorBlack"
        style="@style/TVTitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_transaction_tv_title"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_transaction_til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_transaction_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Transaction Name"
                android:background="@drawable/rounded_square"
                android:backgroundTint="@color/colorDisabledLight"
                android:padding="12dp"
                android:drawableStart="@drawable/ic_border_color_black_24dp"
                style="@style/TIForm"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/add_transaction_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_class_black_24dp"
            style="@style/TIForm"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_transaction_til_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_transaction_et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Price"
                android:background="@drawable/rounded_square"
                android:backgroundTint="@color/colorDisabledLight"
                android:padding="12dp"
                android:drawableStart="@drawable/ic_monetization_on_black_24dp"
                style="@style/TIForm"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/add_btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/button_confirm"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_button"
            style="@style/CleanButton"/>

        <Button
            android:id="@+id/add_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/button_cancel"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorDisabled"
            style="@style/CleanButton"/>

    </LinearLayout>

</RelativeLayout>