<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment"
    android:background="@color/colorDisabledLight"
    android:orientation="vertical">

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        style="@style/CleanContainer">-->

<!--        <TextView-->
<!--            android:id="@+id/home_tv_account_title"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/account_title"-->
<!--            android:textColor="@color/colorBlack"-->
<!--            style="@style/TVTitle"/>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/home_tv_account_title"-->
<!--            android:orientation="vertical">-->

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/home_rv_account"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                tools:listitem="@layout/item_account"-->
<!--                tools:itemCount="5">-->

<!--            </androidx.recyclerview.widget.RecyclerView>-->

<!--            <Button-->
<!--                android:id="@+id/home_account_add"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/CleanButtonInline"-->
<!--                android:paddingStart="30dp"-->
<!--                android:paddingEnd="30dp"-->
<!--                android:drawableEnd="@drawable/ic_add_black_24dp"-->
<!--                android:text="@string/home_account_add"-->
<!--                android:textColor="@color/colorBlack"/>-->

<!--        </LinearLayout>-->

<!--    </RelativeLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CleanContainer">

        <TextView
            android:id="@+id/home_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_balance_title"
            android:textColor="@color/colorBlack"
            style="@style/TVTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_balance_title"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card1">

                <LinearLayout
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/colorLighterGreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/colorGreen"
                        android:layout_marginTop="5pt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Your Balance:"
                        android:textStyle="bold"
                        android:textSize="10pt"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/home_balance"
                        android:textColor="@color/colorDarkGreen"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="16pt"
                        android:gravity="center"
                        android:paddingBottom="8dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CleanContainer">

        <TextView
            android:id="@+id/home_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_history_title"
            android:textColor="@color/colorBlack"
            style="@style/TVTitle"/>

        <TextView
            android:id="@+id/home_history_tv_noitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_history_title"
            android:text="@string/no_transaction"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:visibility="gone"
            style="@style/CleanButtonInline"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_history_title"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_rv_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_transaction"
                tools:itemCount="5">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>